[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mta"
version = "0.1.0"
description = ""
authors = ["Nolan Conaway <nolanbconaway@gmail.com>"]
packages = [{ include = "mta" }]
include = ["mta/data/images/*.svg"]


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
google = "^2.0"
gtfs-realtime-bindings = "^0.0.6"
protobuf3-to-dict = "^0.1.5"
pendulum = "^2.0"
python-dotenv = { version = "^0.10.3", optional = true }
click = {version = "^7.0",optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pydocstyle = "^4.0"
pylint = "^2.3"
pytest = "^5.0"
tox = "^3.13"

[tool.poetry.scripts]
mta = "mta.cli.cli:entry_point"

[tool.poetry.extras]
cli = ["python-dotenv", "click"]